--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,6 @@ updates:
     schedule:
       interval: "daily"
   - package-ecosystem: "docker"
-    directory: "/docker"
+    directory: "/"
     schedule:
       interval: "daily"
