--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,8 +32,8 @@ jobs:
         name: Build and push sd
         uses: docker/build-push-action@v2
         with:
-          context: ./docker
-          file: ./docker/Dockerfile
+          context: ./
+          file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: philipslabs/variant,docker.na1.hsdp.io/loafoe/variant
