--- a/.github/workflows/docker_tagged.yml
+++ b/.github/workflows/docker_tagged.yml
@@ -25,7 +25,7 @@ jobs:
         name: Login to HSDP Docker registry
         uses: docker/login-action@v1
         with:
-          registry: docker.na1.hsdp.io
+          registry: docker.eu1.hsdp.io
           username: ${{ secrets.HSDP_DOCKER_USERNAME }}
           password: ${{ secrets.HSDP_DOCKER_PASSWORD }}
       -
@@ -47,8 +47,7 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: philipssoftware/variant:${{ steps.vars.outputs.tag }},docker.na1.hsdp.io/philipssoftware/variant:${{ steps.vars.outputs.tag }}
-          cache-from: type=registry,ref=philipssoftware/variant:buildcache
+          tags: philipssoftware/variant:${{ steps.vars.outputs.tag }},docker.eu1.hsdp.io/philipssoftware/variant:${{ steps.vars.outputs.tag }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
